--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         emulator = null;
       }
       const mode = document.getElementById("mode").value;
-      const baseGitHub = "https://raw.githack.com/Longnononn/h-tool-railway/main/";
+      const baseGitHub = "https://cdn.jsdelivr.net/gh/Longnononn/h-tool-railway@main/";
       const isoDrive = "https://drive.google.com/uc?export=download&id=1Q0kF7Wx12J2dOsbqptD7XC8IpwWirbcb";
 
       const existingScript = document.getElementById("libv86script");
@@ -76,8 +76,8 @@
       script.onload = () => {
         emulator = new V86Starter({
           wasm_path: baseGitHub + (mode === "debug" ? "v86-debug.wasm" : "v86.wasm"),
-          memory_size: 1024 * 1024 * 1024, // 1GB RAM
-          vga_memory_size: 8 * 1024 * 1024, // 8MB VGA memory
+          memory_size: 1024 * 1024 * 1024,
+          vga_memory_size: 8 * 1024 * 1024,
           screen_container: document.getElementById("screen_container"),
           bios: { url: baseGitHub + "bios/seabios.bin" },
           vga_bios: { url: baseGitHub + "bios/vgabios.bin" },
